# homography

./: .gitignore  LICENSE  README  algebraic_minimization.py  generate-dot  homography.py  projective-plot.py  rasterization.py  roadmap.md  transformation.py
configs/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  t4_onto_t5.json
cpp/: CMakeLists.txt
cpp/Blender/include/Blender/: StepBlender.hpp
cpp/CameraCalibration/: CMakeLists.txt
cpp/CameraCalibration/include/: CameraCalibration.hpp  Utilities.hpp
cpp/CameraCalibration/source/: Calibrator.cpp  CameraCalibration.cpp  Utilities.cpp
cpp/ExternalProjects/: CMakeLists.txt  README.md
cpp/FeatureExtractors/: CMakeLists.txt
cpp/FeatureExtractors/include/FeatureExtractors/: ImageGradient.hpp
cpp/FeatureExtractors/source/: ImageGradient.cpp
cpp/FeatureExtractors/test/: CMakeLists.txt  GradientTest.cpp
cpp/Geometry/: CMakeLists.txt
cpp/Geometry/include/Geometry/: ConvexPolygon.hpp  LineSegment.hpp
cpp/Geometry/test/: CMakeLists.txt  TestGeometry.cpp
cpp/Image/: CMakeLists.txt
cpp/Image/include/Image/: Error.hpp  Image.hpp
cpp/Image/source/: Image.cpp
cpp/Image/test/: CMakeLists.txt  TestImage.cpp
cpp/Panorama/: CMakeLists.txt
cpp/Panorama/include/Panorama/: Utility.hpp
cpp/Panorama/source/: Utility.cpp
cpp/Panorama/test/: CMakeLists.txt  PanoramaStitcher.cpp  TestUtility.cpp
cpp/Render/: CMakeLists.txt  main.cpp
cpp/Render/source/: main.cpp
cpp/Samples/: CMakeLists.txt
cpp/Samples/source/: generateGradient.cpp  sobel.cpp
cpp/Solvers/: CMakeLists.txt
cpp/Solvers/include/Solvers/: Image.hpp  Line.hpp  Ransac.hpp
cpp/Solvers/source/: Ransac.cpp
cpp/Solvers/test/: CMakeLists.txt  TestSolvers.cpp
python/: ConcaveHull.py  DirectLinearTransform.py  Polygon.py  intersection.py
python/configs/: t4_onto_t5.json
python/data/: concaveSet00.json
tasks/: BuildBoostGIL.json  CreateRenderLib.json  EigenToJpeg.json  EigenToPng.json  RenderWithoutOpenCV.json
